bdr.BDR2.scala.error
Erreur de compilation :
BDR2:24: error: illegal start of simple expression
} 
^